Fix text wrapping on firefox when viewport is smaller than dict modal

--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2264,6 +2264,7 @@ button.hotkey-list-item-enabled-button[data-scope-count='0'] {
     flex-flow: row nowrap;
     align-items: center;
     margin-right: 0.5em;
+    overflow-wrap: anywhere;
 }
 .dictionary-title {
     color: inherit;
